--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-
-casadi
-cvxpy
-cvxpygen
-matplotlib
-numpy
-Pillow
-scipy
-Sphinx
+casadi==3.6.7
+cvxpy==1.5.1
+cvxpygen==0.3.5
+jax==0.4.30
+matplotlib==3.10.1
+numpy==2.2.4
+pybind11==2.13.6
+scipy==1.15.2
+setuptools==70.0.0
+sympy==1.12.1
