--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ cvxpygen==0.3.5
 jax==0.4.30
 matplotlib
 numpy
-pybind11==2.13.6
+#pybind11==2.13.6
 scipy
-setuptools==70.0.0
+#setuptools==70.0.0
 sympy
 
